# ipmi-exercises

./: .gitignore  CMakeLists.txt  Doxyfile.in  Hello.cpp  Hello.h  LICENSE  README.md  ipmi-exercises.spec.in  main.cpp  sonar-project.properties
